添加私教课预约状态